# comfyui-ollama-model-manager

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  TESTING.md  __init__.py  install.py  pyproject.toml  pytest.ini
src/comfyui_ollama_model_manager/: __init__.py  api.py  async_utils.py  chat.py  log_config.py  nodes.py  ollama_client.py  options.py  state.py  types.py
tests/: __init__.py  conftest.py  test_api.py  test_async_utils.py  test_chat.py  test_log_config.py  test_nodes.py  test_ollama_client.py  test_options.py  test_state.py
web/: README.md  ollama_widgets.js
