[project]
name = "comfyui-ollama-model-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "darth-veitcher", email = "1722315+darth-veitcher@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "rich>=14.2.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    # Ignore warnings about unawaited coroutines from mock internals
    # These occur when pytest pickles/copies mock objects that reference async functions
    "ignore::RuntimeWarning:copyreg",
    "ignore::RuntimeWarning:unittest.mock",
    "ignore::RuntimeWarning:warnings",
    "ignore::RuntimeWarning:contextlib",
    "ignore::RuntimeWarning:json.encoder",
]
